[gd_scene load_steps=3 format=3 uid="uid://b1v8x5hs8g8dy"]

[ext_resource type="Script" path="res://scripts/levels/glen_bingo.gd" id="1_0hdxp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.294118, 0.792157, 0.160784, 1)

[node name="root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0hdxp")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="UI" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="TitleContainer" type="HBoxContainer" parent="UI"]
layout_mode = 2
size_flags_vertical = 1

[node name="TitleLabel" type="Label" parent="UI/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "GLEN'S UNDERGROUND QUIZ SHOW"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollingTicker" type="Control" parent="UI"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="TickerBG" type="ColorRect" parent="UI/ScrollingTicker"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.1, 1)

[node name="TickerLabel" type="Label" parent="UI/ScrollingTicker"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
text = "Glen adjusts his microphone nervously..."
vertical_alignment = 1

[node name="MainContent" type="HBoxContainer" parent="UI"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanel" type="VBoxContainer" parent="UI/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="GlenContainer" type="VBoxContainer" parent="UI/MainContent/LeftPanel"]
layout_mode = 2
size_flags_vertical = 1

[node name="GlenLabel" type="Label" parent="UI/MainContent/LeftPanel/GlenContainer"]
layout_mode = 2
text = "HOST: GLEN"
horizontal_alignment = 1

[node name="GlenSprite" type="AnimatedSprite2D" parent="UI/MainContent/LeftPanel/GlenContainer"]
position = Vector2(100, 50)
scale = Vector2(2, 2)

[node name="QuestionContainer" type="VBoxContainer" parent="UI/MainContent/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuestionBG" type="ColorRect" parent="UI/MainContent/LeftPanel/QuestionContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.1, 0.1, 0.1, 1)

[node name="QuestionLabel" type="Label" parent="UI/MainContent/LeftPanel/QuestionContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Question will appear here..."
autowrap_mode = 3
vertical_alignment = 1

[node name="OptionsContainer" type="VBoxContainer" parent="UI/MainContent/LeftPanel"]
layout_mode = 2
size_flags_vertical = 2

[node name="OptionButtons" type="VBoxContainer" parent="UI/MainContent/LeftPanel/OptionsContainer"]
layout_mode = 2

[node name="RightPanel" type="VBoxContainer" parent="UI/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.0

[node name="StatusContainer" type="VBoxContainer" parent="UI/MainContent/RightPanel"]
layout_mode = 2
size_flags_vertical = 1

[node name="ScoreLabel" type="Label" parent="UI/MainContent/RightPanel/StatusContainer"]
layout_mode = 2
text = "Score: 0 | Correct: 0/5"
horizontal_alignment = 1

[node name="TimerBar" type="ProgressBar" parent="UI/MainContent/RightPanel/StatusContainer"]
layout_mode = 2
value = 100.0
show_percentage = false

[node name="StatusLog" type="ScrollContainer" parent="UI/MainContent/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="LogText" type="RichTextLabel" parent="UI/MainContent/RightPanel/StatusLog"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
bbcode_enabled = true
text = "[color=#4BCA29]Welcome to Glen's Quiz Show![/color]
"
fit_content = true
scroll_following = true